<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/inputRadioButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClickMode"
            android:text="@string/pinio_pintype_input" />

        <RadioButton
            android:id="@+id/outputRadioButton"
            android:onClick="onClickMode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pinio_pintype_output" />

        <RadioButton
            android:id="@+id/pwmRadioButton"
            android:onClick="onClickMode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pinio_pintype_pwm" />

        <RadioButton
            android:id="@+id/analogRadioButton"
            android:onClick="onClickMode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pinio_pintype_analog" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/stateRadioGroup"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/lowRadioButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClickOutputType"
            android:text="@string/pinio_pintype_low" />

        <RadioButton
            android:id="@+id/highRadioButton"
            android:onClick="onClickOutputType"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pinio_pintype_high" />

    </RadioGroup>

    <SeekBar
        android:id="@+id/pmwSeekBar"
        android:layout_marginTop="10dp"
        android:max="255"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
