<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uart_echo"
                android:textColor="@drawable/default_textcolor" />

            <Switch
                android:id="@+id/echoSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uart_eol"
                android:textColor="@drawable/default_textcolor" />

            <Switch
                android:id="@+id/eolSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/asciiFormatRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClickFormatAscii"
            android:text="@string/uart_format_ascii"
            android:textColor="@drawable/default_textcolor" />

        <RadioButton
            android:id="@+id/hexFormatRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFormatHex"
            android:text="@string/uart_format_hex"
            android:textColor="@drawable/default_textcolor" />
    </RadioGroup>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/textDisplayModeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClickDisplayFormatText"
            android:text="@string/uart_displaymode_text"
            android:textColor="@drawable/default_textcolor" />

        <RadioButton
            android:id="@+id/timestampDisplayModeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDisplayFormatTimestamp"
            android:text="@string/uart_displaymode_timestamp"
            android:textColor="@drawable/default_textcolor" />
    </RadioGroup>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>