<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".app.neopixel.NeopixelBoardTypeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:text="@string/neopixel_boardtype_types_title"
        android:textAllCaps="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/standardTypesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/neopixel_boardtype_custom_title"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/neopixel_boardtype_value_title" />

            <EditText
                android:id="@+id/valueEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickSetValue"
            android:text="@string/neopixel_boardtype_value_set"
            android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>
